# KUKA-ARM

./: README.md
KUKA_ESP32_v12/: KUKA_ESP32_v12.ino
kuka_ws/src/cmd_pkg/: CMakeLists.txt  package.xml
kuka_ws/src/cmd_pkg/action/: Control.action
kuka_ws/src/cmd_pkg/srv/: Enfoque1.srv  Enfoque2.srv
kuka_ws/src/fr_pkg/: package.xml  setup.cfg  setup.py
kuka_ws/src/fr_pkg/fr_pkg/: control_servidor.py  cosecha.py  enfoque_1.py  enfoque_2.py  fake_esp32.py  joint_cmd_test.py  kuka_utils.py  rviz_bridge.py  translator_node.py  tray_cliente.py  user_cliente.py
kuka_ws/src/fr_pkg/launch/: general.launch.py
kuka_ws/src/fr_pkg/test/: test_luisk.py
kuka_ws/src/kuka_description/: package.xml  setup.py
kuka_ws/src/kuka_description/launch/: display.launch.py  gazebo.launch.py  urdf.launch.py
kuka_ws/src/kuka_description/meshes/: barra1_1.stl  barra2_1.stl  base_link.stl  engranaje1_1.stl  engranaje2_1.stl  link1_1.stl  link1_cap_1.stl  link2_1.stl  link3_1.stl  link3_cap1_1.stl  link3_cap2_1.stl  link4_1.stl  pinza1_1.stl  pinza2_1.stl
kuka_ws/src/kuka_description/urdf/: kuka.gazebo  kuka.trans  kuka.xacro  materials.xacro
