<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fr_pkg</name>
  <version>0.0.0</version>
  <description>FR control and bridge nodes for KUKA workspace</description>
  <maintainer email="luisk@todo.todo">luisk</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencias de tiempo de compilación y ejecución -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cmd_pkg</depend>

  <!-- Dependencias de lanzamiento (si usas launch files) 
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend> -->

  <!-- Dependencias de test -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
